[package]
name = "gristmill"
version = "0.1.0"
edition = "2021"

[dependencies]
grist = { path = ".." }
silica = { path = "../silica" }
glam = { version = "0.28", features = ["serde"] }
palette = "0.7"
tiny-game-loop = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.10"
png = "0.17"

miniquad = "0.4"
glyph_brush = "0.7"
console = "0.15"
msgbox = "0.7"
